--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-tailwind2-emotion-styled-components",
+  "name": "NRG",
   "private": true,
-  "description": "A (reasonably) unopinionated Gatsby starter, including; Tailwind 2",
+  "description": "Creators, makers and builders.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
