--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-spring": "^8.0.27",
     "stylelint": "^12.0.0",
     "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^1.1.4"
