--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-resolve-src": "^2.0.0",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-source-storyblok": "^0.2.6",
     "gatsby-transformer-sharp": "^2.3.9",
     "postcss": "^7.0.25",
     "postcss-import": "^12.0.1",
@@ -34,6 +35,7 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.27",
     "shiitake": "^3.0.2",
+    "storyblok-react": "0.0.10",
     "stylelint": "^12.0.0",
     "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^1.1.4"
