--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^4.3.1",
     "react-player": "^1.15.2",
     "react-spring": "^8.0.27",
+    "react-static-google-map": "^0.5.4",
     "shiitake": "^3.0.2",
     "storyblok-react": "0.0.10",
     "stylelint": "^12.0.0",
