--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@u-wave/react-vimeo": "^0.8.3",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.18",
@@ -36,7 +37,6 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.3.1",
-    "react-player": "^1.15.2",
     "react-reveal": "^1.2.2",
     "react-spring": "^8.0.27",
     "react-static-google-map": "^0.5.4",
