--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-nprogress": "^2.3.0",
+    "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.1.18",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-resolve-src": "^2.0.0",
