--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.20.31",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.18",
+    "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-nprogress": "^2.3.0",
     "gatsby-plugin-offline": "^3.2.0",
