--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@ccalamos/gatsby-source-googlemaps-static": "^3.0.1",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@u-wave/react-vimeo": "^0.8.3",
@@ -32,7 +33,6 @@
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-source-googlemaps-static": "^1.1.1",
     "gatsby-source-storyblok": "^0.2.6",
     "gatsby-storyblok-image": "^0.2.2",
     "gatsby-transformer-sharp": "^2.3.9",
